--- a/flask_app/company_blog/templates/base.html
+++ b/flask_app/company_blog/templates/base.html
@@ -9,8 +9,8 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.ckeditor.com/4.18.0/standard/ckeditor.js"></script>
-    <link rel="icon" href="/static/yossy.png">    
-    <title>Yossy Inc.</title>
+    <link rel="icon" href="/static/r.png">    
+    <title>riku practice</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
