add death counter, google map

--- a/flask_app/company_blog/templates/base.html
+++ b/flask_app/company_blog/templates/base.html
@@ -46,7 +46,9 @@
               <li class="nav-item">
                 <a class="nav-link {% if request.endpoint == 'users.user_maintenance' %}active{% endif %}" href="{{url_for('users.user_maintenance')}}">ユーザー</a>
               </li>
-              
+              <li class="nav-item">
+                <a class="nav-link {% if request.endpoint == 'death.death_counter' %}active{% endif %}" href="{{url_for('death.death_counter')}}">DEATH</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('users.logout') }}">ログアウト</a>
               </li>
